--- a/src/templates/report.html
+++ b/src/templates/report.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel = "stylesheet" href = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-    <title>Main Page</title>
+     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <title>Report</title>
     <style>
      .navbar .nav-link.r {
           color: #4e8fcc; background-color: #d7e1f3
         }
-
+       #map {
+            height: 400px;
+            margin-top: 20px;
+        }
     </style>
 </head>
 
@@ -25,72 +28,46 @@
         {% endif %}
     {% endwith %}
 </div>
-<div  class="container-fluid" style="padding-right: 10%; padding-left: 10%; padding-top: 20px">
-<form id = "reportForm" class ="border rounded p-3" method="POST" action="{{ url_for('report.create_report') }}" enctype="multipart/form-data">
+
+<div class="container-fluid" style="padding-right: 10%; padding-left: 10%; padding-top: 20px">
+<form id="reportForm" class="border rounded p-3" method="POST" action="{{ url_for('report.create_report') }}" enctype="multipart/form-data">
     <div class="mb-3">
-      <label for="location" class="form-label">Your coordinates</label>
-      <input type="text" id="location" name="location" class="form-control" placeholder="Enter your location or use current location">
+        <label for="street" class="form-label">Street</label>
+        <input type="text" id="street" name="street" class="form-control" placeholder="Enter your street" required>
+    </div>
+    <div class="mb-3">
+        <label for="zipcode" class="form-label">Zipcode</label>
+        <input type="text" id="zipcode" name="zipcode" class="form-control" placeholder="Enter your zipcode" required>
     </div>
     <div class="form-check-sm">
-      <input class="form-check-input-sm" type="checkbox" id="useCurrentLocation" onclick="toggleLocation()">
-      <label class="form-check-label" for="useCurrentLocation">
-        Use My Current Location
-      </label>
+        <input class="form-check-input-sm" type="checkbox" id="useCurrentLocation" onclick="toggleLocation()">
+        <label class="form-check-label" for="useCurrentLocation">
+            Use My Current Location
+        </label>
     </div>
+    <div id="map"></div>
     <br>
     <div class="mb-3">
-  <label for="description" class="form-label">What happened?</label>
-  <textarea class="form-control" id="description" name="description" rows="3"></textarea>
-</div><div class="mb-3">
-  <label for="photo" class="form-label">Photos of an accident</label>
-  <input class="form-control" type="file" id="photo" name="photo">
-</div>
-  <button type="submit" class="btn btn-dark d-block mx-auto">Send a report</button>
+        <label for="location" class="form-label">Location Coordinates</label>
+        <input type="text" id="location" name="location" class="form-control" placeholder="Location will appear here" readonly>
+    </div>
+    <div class="mb-3">
+        <label for="description" class="form-label">What happened?</label>
+        <textarea class="form-control" id="description" name="description" rows="3" maxlength="300" placeholder="Describe the incident (max 300 characters)" required></textarea>
+        <div id="charCount" class="form-text">0/300 characters</div>
+    </div>
+    <div class="mb-3">
+        <label for="photo" class="form-label">Photo of an accident</label>
+        <input class="form-control" type="file" id="photo" name="photo">
+    </div>
+    <button type="submit" class="btn btn-dark d-block mx-auto">Send a report</button>
 </form>
 </div>
-</body>
 
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script>
-  function toggleLocation() {
-    const locationField = document.getElementById("location");
-    const useCurrentLocation = document.getElementById("useCurrentLocation").checked;
 
-    if (useCurrentLocation) {
+<script src = "{{ url_for('static', filename='scripts/create_report.js') }}"></script>
 
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(
-          (position) => {
-            locationField.value = `${position.coords.latitude},${position.coords.longitude}`;
-            locationField.readOnly = true;
-          },
-          (error) => showError(error)
-        );
-      } else {
-        alert("Geolocation is not supported by this browser.");
-      }
-    } else {
-      locationField.value = "";
-      locationField.readOnly = false;
-    }
-  }
-
-  function showError(error) {
-    switch (error.code) {
-      case error.PERMISSION_DENIED:
-        alert("Permission denied. Please enable location access or enter your location manually.");
-        break;
-      case error.POSITION_UNAVAILABLE:
-        alert("Location information is unavailable.");
-        break;
-      case error.TIMEOUT:
-        alert("The request to get user location timed out.");
-        break;
-      case error.UNKNOWN_ERROR:
-        alert("An unknown error occurred.");
-        break;
-    }
-  }
-</script>
-
+</body>
 </html>
