--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -3,7 +3,7 @@
 
 <nav style="font-family: Calibri; font-size: large" class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
   <div style="margin-left: 10%; margin-right: 40%" class="navbar-brand">
-      <span style="font-weight: bold">AFM</span><br>
+      <span style="font-weight: bold">AFM </span><br>
       <span style="color: #545252;">Austrian Flood Monitoring System</span>
   </div>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,17 +14,19 @@
       <li class="nav-item active">
         <a class="nav-link m" href="{{ url_for('main.mainpage') }}">Map</a>
       </li>
-        {% if current_user.is_authenticated and not current_user.agent and not  current_user.manager and not current_user.is_owner and not current_user.superadmin%}
+      
+        {% if current_user.is_authenticated %}
         <li class="nav-item active">
+          
           <a class="nav-link r" href="{{ url_for('report.create_report') }}">Report</a>
         </li>
         {% endif %}
-    {% if current_user.is_authenticated and current_user.manager %}
+    {% if current_user.is_authenticated and current_user.manager or is_super_admin %}
         <li class="nav-item active">
           <a class="nav-link vr" href="{{ url_for('report.view_reports') }}">Reports</a>
         </li>
         {% endif %}
-    {% if current_user.is_superadmin %}
+    {% if is_super_admin %}
                         <li class="nav-item active">
                             <a class="nav-link" href="{{ url_for('superadmin.superadmin_dashboard') }}">Superadmin</a>
                         </li>
